--- a/src/main/resources/local/dev/fxchatclient/chat-view.fxml
+++ b/src/main/resources/local/dev/fxchatclient/chat-view.fxml
@@ -3,32 +3,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="local.dev.fxchatclient.controller.ChatController"
             fx:id="rootPane"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="400.0">
 
-    <SplitPane>
+    <SplitPane VBox.vgrow="ALWAYS" dividerPositions="0.25">
 
-        <AnchorPane  maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0">
-            <VBox spacing="5.0" style="-fx-padding: 10;">
+        <VBox  maxWidth="200.0" minWidth="150.0" spacing="5.0" style="-fx-padding: 10;">
                 <Label text="Benutzerliste:"/>
                 <ListView fx:id="userListView" VBox.vgrow="ALWAYS"/>
-            </VBox>
-        </AnchorPane>
+        </VBox>
 
-        <AnchorPane>
-            <VBox>
-                <ListView fx:id="chatListView" VBox.vgrow="ALWAYS" editable="false"/>
+        <VBox>
+                <ListView fx:id="chatListView" VBox.vgrow="ALWAYS"/>
 
                 <HBox spacing="5.0" style="-fx-padding: 10;">
                     <TextField fx:id="messageInput" promptText="Nachricht eingeben..." HBox.hgrow="ALWAYS" />
                     <Button fx:id="sendButton" text="Senden" onAction="#handleSendMessage"/>
                 </HBox>
-            </VBox>
-        </AnchorPane>
+        </VBox>
 
     </SplitPane>
 
-</AnchorPane>
+</VBox>
