--- a/src/main/resources/local/dev/fxchatclient/start-view.fxml
+++ b/src/main/resources/local/dev/fxchatclient/start-view.fxml
@@ -6,13 +6,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="local.dev.fxchatclient.controller.LoginController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="400.0">
 
 
-    <VBox AnchorPane.topAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" >
         <Label text="Server-Adresse:" />
         <TextField fx:id="addressField" text="javaprojects.ch" />
         <Label text="Port:" />
@@ -30,5 +29,4 @@
             <Button fx:id="loginButton" text="Login" onAction="#handleLoginAction" />
             <Button fx:id="registerButton" text="Register" onAction="#handleRegisterAction" />
         </HBox>
-    </VBox>
-</AnchorPane>
+</VBox>
